<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.socialbike.phuketsocialbike.RegistrationActivity"
    android:orientation="vertical"
    android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/head"
            android:id="@+id/textView"
            android:textIsSelectable="true"
            android:textSize="30dp"
            android:layout_weight="0.12"
            android:layout_gravity="top"
            android:gravity="center"
            android:layout_row="6"
            android:layout_column="0" />

    <GridLayout
        android:layout_width="352dp"
        android:layout_height="476dp"
        android:layout_marginTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/accountName_txt"
        android:id="@+id/textView5"
        android:layout_marginTop="20dp"
        android:layout_row="0"
        android:layout_column="0" />

    <EditText
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:id="@+id/editText3"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_row="0"
        android:layout_column="2"
        android:background="#ffffdd6a" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/accountPassword_txt"
            android:id="@+id/textView6"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="165dp"
            android:layout_height="40dp"
            android:id="@+id/editText4"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_marginTop="20dp"
            android:background="#ffffdd6a" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/FirtName_txt"
            android:id="@+id/textView7"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="165dp"
            android:layout_height="40dp"
            android:id="@+id/editText5"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_marginTop="20dp"
            android:background="#ffffdd6a" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lastName_txt"
            android:id="@+id/textView8"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="165dp"
            android:layout_height="40dp"
            android:id="@+id/editText6"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_marginTop="20dp"
            android:background="#ffffdd6a" />

        <TextView
            android:layout_width="165dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/gender_txt"
            android:id="@+id/textView9"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginTop="30dp" />

        <RadioGroup
            android:layout_width="117dp"
            android:layout_height="83dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_marginTop="20dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_radio"
                android:id="@+id/radioButton" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_radio"
                android:id="@+id/radioButton2" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/age_txt"
            android:id="@+id/textView10"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText7"
            android:layout_row="6"
            android:layout_column="2"
            android:layout_marginTop="20dp"
            android:background="#ffffdd6a" />

        <Button
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:id="@+id/button"
            android:layout_row="9"
            android:layout_column="2"
            android:layout_gravity="right" />

    </GridLayout>
</LinearLayout>
