<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <!--slide manu-->
    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Framelayout to display Fragments -->
        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:background="#e4969696"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/create_trip"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="24dp" />

                <Button
                    android:id="@+id/imageButton2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/add"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginLeft="45dp" />

                <Button
                    android:id="@+id/trip_introduce_btn"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/aa"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp" />

                <Button
                    android:id="@+id/weather_btn"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/cloud"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp" />

                <Button
                    android:id="@+id/imageButton4"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/share"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="218dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="55dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/New_trip"
                    android:id="@+id/textView15"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:id="@+id/editText8"
                    android:background="#ffffdd6a"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:id="@+id/editText10"
                    android:background="#ffffdd6a"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp" />
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergen_button"
                android:id="@+id/emergency_btn"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="530dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button5"
                android:layout_gravity="center" />


        </FrameLayout>
        <!-- Listview to display slider menu -->
        <ListView
            android:id="@+id/list_slidermenu"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@color/material_deep_teal_500"
            android:dividerHeight="1dp"
            android:background="@color/listView_bg" />
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>
