<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <!--slide manu-->
    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Framelayout to display Fragments -->
        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:background="#e4969696"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/bikerBoard"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="24dp" />

                <Button
                    android:id="@+id/trip_introduce_btn"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/bike1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="80dp" />

                <Button
                    android:id="@+id/picture_btn"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/camera_pic"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp" />

                <Button
                    android:id="@+id/imageButton4"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/share"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="472dp"
                android:id="@+id/scrollView"
                android:layout_weight="0.16"
                android:layout_marginTop="50dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginTop="10dp"
                    android:weightSum="1">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="193dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="top|center_horizontal"
                            android:layout_marginTop="10dp"
                            android:weightSum="1"
                            android:background="#ffffdd6a"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:id="@+id/board_editText"
                                android:layout_weight="0.16"
                                android:textColor="@android:color/black"
                                android:background="#ffffdd6a"
                                android:layout_marginLeft="5dp" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/imgBoard_imgView"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="0.16"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:visibility="invisible" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/post_btn"
                                android:id="@+id/button4"
                                android:layout_gravity="right"
                                android:layout_marginRight="12dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="10dp" />

                            <Gallery
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/gallery"
                                android:layout_gravity="right"
                                android:layout_weight="0.16" />
                        </LinearLayout>
                        </ScrollView>

                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="285dp"
                android:layout_marginTop="250dp"
                android:longClickable="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="#e4464343"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="240dp"
                        android:layout_weight="0.16">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/eventNews_txt"
                            android:id="@+id/textView11"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/timeEvent"
                            android:id="@+id/textView13"
                            android:layout_marginLeft="20dp" />

                        <ImageButton
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:id="@+id/imageButton5"
                            android:background="@drawable/share"
                            android:layout_marginLeft="175dp" />
                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:id="@+id/editText9"
                        android:layout_gravity="center"
                        android:background="#ffffff"
                        android:textColor="@android:color/black"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Text"
                        android:id="@+id/textView14"
                        android:layout_gravity="right"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp" />

                </LinearLayout>
            </ScrollView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergen_button"
                android:id="@+id/emergency_btn"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="520dp" />

        </FrameLayout>

        <!-- Listview to display slider menu -->
        <ListView
            android:id="@+id/list_slidermenu"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@color/material_deep_teal_500"
            android:dividerHeight="1dp"
            android:background="@color/listView_bg" />
    </android.support.v4.widget.DrawerLayout>


</LinearLayout>
